pavucontrol (0.9.5-1) UNRELEASED; urgency=low

  * New Upstream Version. (Closes: #448329)
  * debian/copyright: Remove LGPL. paprefs is now fully GPL.
  * debian/control:
    + Add Vcs-* fields.
    + Add Homepage field.

 -- CJ van den Berg <cj@vdbonline.com>  Wed, 21 Nov 2007 17:39:16 +0100

pavucontrol (0.9.4-2) unstable; urgency=low

  [ Loic Minier ]
  * Fix typo in copyright.

  [ CJ van den Berg ]
  * debian/rules: Port to CDBS.
  * debian/patches/01_use_stock_g2.14_icons.dpatch:
    - Removed. No longer needed for Gnome 2.18.

 -- CJ van den Berg <cj@vdbonline.com>  Tue, 29 May 2007 10:00:36 +0200

pavucontrol (0.9.4-1) unstable; urgency=low

  [ CJ van den Berg ]
  * Initial release

  [ Loic Minier ]
  * Clarify which files are under which license.

 -- Loic Minier <lool@dooz.org>  Sat, 21 Oct 2006 09:51:48 +0200
